Estilando el carrito

--- a/EkoClient/src/app/car/car-view/car-view.component.html
+++ b/EkoClient/src/app/car/car-view/car-view.component.html
@@ -4,7 +4,7 @@
       <h6 class="col-12 car-view__container-row-title">Reservas del usuario</h6>
       <div *ngFor="let reserva of reservas" class="car-view__container-row-item col-12 row">
         <div class="col-5">
-          ID Producto: {{ reserva.productoid }}
+          ID Producto: {{ reserva.nomProducto }}
         </div>
         <div class="col-5">
           Fecha: {{ reserva.fechas }}
