--- a/EkoClient/src/app/car/car-view/car-view.component.html
+++ b/EkoClient/src/app/car/car-view/car-view.component.html
@@ -2,6 +2,17 @@
   <div class="container car-view__container">
     <div class="row car-view__container-row">
       <h6 class="col-12 car-view__container-row-title">Reservas del usuario</h6>
+      <div class="car-view__container-row-item titles col-12 row">
+        <div class="col-5">
+          ID Producto
+        </div>
+        <div class="col-5">
+          Fecha
+        </div>
+        <div class="col-2">
+          Acciones
+        </div>
+      </div>
       <div *ngFor="let reserva of reservas" class="car-view__container-row-item col-12 row">
         <div class="col-5">
           ID Producto: {{ reserva.nomProducto }}
@@ -15,9 +26,6 @@
         <div class="col-1">
           <a class="eko-link" (click)="finalizarReserva(reserva)">Finalizar</a>
         </div>
-        <br>
-        <br>
-        <br>
         <app-rate-form class="col-12" [idProducto]="reserva.productoid" [idReserva]="reserva._id" *ngIf="reserva.finalizar"></app-rate-form>
       </div>
     </div>
