--- a/EkoClient/src/app/car/car-view/car-view.component.scss
+++ b/EkoClient/src/app/car/car-view/car-view.component.scss
@@ -4,6 +4,7 @@
     
     &-row {
       &-title {
+        margin-bottom: 0;
         text-align: center;
         font-size: 20px;
         color: #caffcd;
@@ -18,6 +19,12 @@
         background-color: #333;
         border-bottom: 1px solid #FFF;
         margin: 0;
+
+        &.titles {
+          text-transform: uppercase;
+          font-size: 16px;
+          font-weight: 700;
+        }
       }
     }
   }
