Estilando el carrito

--- a/EkoClient/src/app/car/car-view/car-view.component.html
+++ b/EkoClient/src/app/car/car-view/car-view.component.html
@@ -65,7 +65,7 @@
           <a class="eko-link eko-link-light" (click)="abrirInfoReserva(producto)">Expandir</a>
         </div>
         <section *ngIf="producto.verInfoProducto" class="car-view__container-row-item col-12 row disponibilidad">
-          <h6 class="col-12 car-view__container-row-title">Disponibilidad</h6>
+          <h6 class="col-12 car-view__container-row-title title">Disponibilidad</h6>
           <div class="car-view__container-row-item titles col-12 row">
             <div class="col-5">
               Fecha
