--- a/EkoClient/src/app/car/car-view/car-view.component.scss
+++ b/EkoClient/src/app/car/car-view/car-view.component.scss
@@ -35,6 +35,23 @@
           font-size: 16px;
           font-weight: 700;
         }
+
+        &.disponibilidad {
+          color: #333;
+          background-color: #ddd;
+
+          & .title {
+            background-color: #888;
+          }
+
+          .titles {
+            color: #333;
+            background-color: #bbb;
+            text-transform: uppercase;
+            font-size: 16px;
+            font-weight: 700;
+          }
+        }
       }
     }
   }
