--- a/EkoClient/src/app/product/product-view/product-view.component.html
+++ b/EkoClient/src/app/product/product-view/product-view.component.html
@@ -156,6 +156,12 @@
             <img style="border-radius: 10px;" src="{{ producto.foto }}">
           </figure>
           <br>
+          <div class="calificacion">
+            <h4>Calificación</h4>
+            <div class="stars" >
+              <img src="https://img.freepik.com/free-vector/start_53876-25533.jpg?size=338&ext=jpg" >
+            </div>
+          </div>
           <!-- <app-rate-form [idProducto]="producto._id"></app-rate-form> -->
           <app-question-form [idProducto]="producto._id"></app-question-form>
           <ng-container *ngFor="let pregunta of producto.pregunta">
