--- a/EkoClient/src/app/product/product-view/product-view.component.html
+++ b/EkoClient/src/app/product/product-view/product-view.component.html
@@ -8,11 +8,11 @@
           <h1 class="eko-producto__title eko-title">{{ producto.titulo }}</h1>
           <h5 class="eko-producto__type">{{ producto.tipo }}</h5>
           <div class="eko-producto__info-ciudad">
-              <p class="eko-producto__text">{{ producto.ciudad }}</p>
-              <ng-container *ngIf="tieneInfoCiudad">
-                  <p class="eko-producto__text-title">{{ infoCiudad.pais }} - {{ infoCiudad.code }}</p>
-                  <img src="{{ infoCiudad.bandera }}" alt="Bandera {{ infoCiudad.pais }}" height="30px">
-              </ng-container>
+            <p class="eko-producto__text">{{ producto.ciudad }}</p>
+            <ng-container *ngIf="tieneInfoCiudad">
+              <p class="eko-producto__text-title">{{ infoCiudad.pais }} - {{ infoCiudad.code }}</p>
+              <img src="{{ infoCiudad.bandera }}" alt="Bandera {{ infoCiudad.pais }}" height="30px">
+            </ng-container>
           </div>
           <p class="eko-producto__text">${{ producto.precio }}</p>
           <p class="eko-producto__text">{{ producto.descripcion }}</p>
@@ -158,16 +158,22 @@
           <br>
           <div class="calificacion">
             <h4>Calificación</h4>
-            <div class="stars" >
-              <img src="https://img.freepik.com/free-vector/start_53876-25533.jpg?size=338&ext=jpg" >
+            <div class="stars">
+              <img src="https://img.freepik.com/free-vector/start_53876-25533.jpg?size=338&ext=jpg">
             </div>
           </div>
           <!-- <app-rate-form [idProducto]="producto._id"></app-rate-form> -->
-          <app-question-form [idProducto]="producto._id"></app-question-form>
-          <ng-container *ngFor="let pregunta of producto.pregunta">
-            <app-question-view [pregunta]="pregunta" [puedeResponder]="esMiProducto"></app-question-view>
-          </ng-container>
         </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-lg-8 col-11">
+        <app-question-form [idProducto]="producto._id" *ngIf="!esMiProducto"></app-question-form>
+      </div>
+      <div *ngFor="let pregunta of producto.pregunta" class="col-lg-8 col-11">
+        <app-question-view [pregunta]="pregunta" [puedeResponder]="esMiProducto"></app-question-view>
       </div>
     </div>
   </div>
